# transaction_intelligence_app

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.selfhosted.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_messages_table.py  002_create_milestone2_tables.py  003_create_users_table.py  004_create_budgets_reports_tables.py  005_add_per_source_parse_modes.py  006_create_chat_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  base.py  registry.py
backend/app/adapters/emirates_nbd/: __init__.py  adapter.py  parsers.py
backend/app/adapters/mashreq/: __init__.py  adapter.py  parsers.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  ip_allowlist.py  logging.py  metrics.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/schemas/: __init__.py  ai.py  analytics.py  auth.py  budget.py  category.py  ingest.py  report.py  transaction.py  vendor.py  wallet.py
backend/app/services/: __init__.py  admin.py  analytics.py  auth.py  budget.py  categorization.py  chat.py  export.py  merge.py  ollama.py  parsing.py  report.py  vendor.py  wallet.py
backend/tests/: test_adapters.py  test_admin.py  test_encryption.py  test_health.py  test_ingest.py  test_merge.py  test_metrics.py  test_parsing.py  test_security.py  test_vendor.py  test_wallet.py
scripts/: backup.sh  (+2 more)
(+89 files in other folders)
